# dde-smart-dir

./: .gitignore  CMakeLists.txt  DirsWatcher.cpp  DirsWatcher.h  SmartDirPlugin.cpp  SmartDirPlugin.h  SmartDirPluginWidget.cpp  SmartDirPluginWidget.h  SmartDirSettings.cpp  SmartDirSettings.h  SmartDirUtils.cpp  SmartDirUtils.h  main.cpp  readme.md  resource.qrc
widgets/: SmartDirItemWidget.cpp  SmartDirItemWidget.h  SpecialLabel.cpp  SpecialLabel.h  fanlistwidget.cpp  fanlistwidget.h  smartdiritemwidget.cpp  smartdiritemwidget.h  smartdirsettingwidget.cpp  smartdirsettingwidget.h  smartdirsettingwidget.ui  smartdirwidget.cpp  smartdirwidget.h
